--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "export": "next export",
-    "deploy": "next build && next export"
+    "deploy": "next build"
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.2.7",
