--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "18"
-          cache: 'npm'
+          cache: 'pnpm'
       - name: Setup Pages
         uses: actions/configure-pages@v3
         with:
